Add Vitest + GitHub Actions CI
- Installed vitest as dev dependency
- Updated package.json with test and test:watch scripts
- Added vitest globals import to rules.test.ts
- Created .github/workflows/ci.yml for automated testing
- All 26 tests passing locally

CI runs on push and PR to main branch:
- Node 20
- npm ci
- npm run build
- npm test

Ready for npm publish.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:plugin": "npm run build --workspace=packages/openclaw-plugin",
     "dev": "tsc --watch",
     "start": "node dist/cli/index.js",
-    "test": "jest"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [
     "ai",
@@ -35,7 +36,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
