--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.3",
     "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
     "commander": "^11.1.0",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
