feat: Interactive auth type selector with descriptions
- Replace plain text auth type prompt with searchable list
- Each option shows inline description
- Arrow keys to navigate, type to filter
- Improves UX for new users

Closes #4

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "homepage": "https://janee.io",
   "license": "MIT",
   "dependencies": {
+    "@inquirer/prompts": "^8.2.0",
     "@modelcontextprotocol/sdk": "^1.25.3",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
