feat: Auto-install SKILL.md for Claude Code, Codex, and Cursor
Fixes #27

Add postinstall script that automatically installs SKILL.md into:
- ~/.claude/skills/janee/SKILL.md
- ~/.codex/skills/janee/SKILL.md
- ~/.cursor/skills/janee/SKILL.md

This enables zero-config skill discovery for agents after npm install.

Implementation:
- scripts/postinstall.js creates skill directories recursively
- Errors are caught silently (permissions, CI, read-only fs)
- SKILL.md and postinstall script included in published package
- Runs automatically after npm install

Based on watercooler v0.2.1 implementation.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "janee": "dist/cli/index.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "SKILL.md",
+    "scripts/postinstall.js"
   ],
   "repository": {
     "type": "git",
@@ -17,6 +19,7 @@
     "packages/*"
   ],
   "scripts": {
+    "postinstall": "node scripts/postinstall.js",
     "build": "tsc && npm run build --workspaces",
     "build:cli": "tsc",
     "build:plugin": "npm run build --workspace=packages/openclaw-plugin",
